@@ -1,0 +1,5 @@
+
+This tests that an option in a optgroup can be removed from the containing select.
+
+Passed
+
